/*
 *  Copyright (c) 2023, WSO2 LLC. (http://www.wso2.org) All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 *
 */
syntax = "proto3";

package wso2.discovery.subscription;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/subscription;subscription";
option java_package = "org.wso2.apk.enforcer.discovery.subscription";
option java_outer_classname = "ApplicationKeyMappingProto";
option java_multiple_files = true;

// [#protodoc-title: ApplicationKeyMapping]

// ApplicationKeyMapping data model
message ApplicationKeyMapping {
  string applicationUUID = 1;
  string securityScheme = 2;
  string applicationIdentifier = 3;
  string keyType = 4;
  string envID = 5;
  int64 timestamp = 6;
}
