syntax = "proto3";

package discovery.service.apkmgt;

import "wso2/discovery/subscription/event.proto";
option go_package = "github.com/wso2/apk/common-go-libs/pkg/discovery/api/wso2/discovery/service/apkmgt";
option java_package = "org.wso2.apk.enforcer.discovery.service.apkmgt";
option java_outer_classname = "EventServiceProto";
option java_multiple_files = true;
option java_generic_services = true;

// [#protodoc-title: EventStreamDS]
service EventStreamService {
    rpc StreamEvents (Request) returns (stream wso2.discovery.subscription.Event) {}
  }
message Request {
    string event = 1;
}