/*
 *  Copyright (c) 2023, WSO2 LLC. (http://www.wso2.org) All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 *
 */
 syntax = "proto3";

 package wso2.discovery.subscription;

 import "wso2/discovery/subscription/application.proto";
 import "wso2/discovery/subscription/applicationmapping.proto";
 import "wso2/discovery/subscription/application_key_mapping.proto";
 import "wso2/discovery/subscription/subscription.proto";
 option go_package = "github.com/wso2/apk/common-go-libs/pkg/discovery/api/wso2/discovery/subscription";
 option java_package = "org.wso2.apk.enforcer.discovery.subscription";
 option java_outer_classname = "EventProto";
 option java_multiple_files = true;
 
 // [#protodoc-title: Event]
 
 // Event data model
 message Event {
     string uuid = 1;
     int64 timeStamp = 2; 
     string type = 3;
     Application application = 4;
     ApplicationMapping applicationMapping = 5;
     ApplicationKeyMapping applicationKeyMapping = 6;
     Subscription subscription = 7;
 }
 